src/test/deca/context/valid/with_object/class_null.deca
class A {}

{
    Object o = null;
    A a = null;
    Object o2 = (null) (o);

    (null) (o);
    (null) (a);

}