src/test/deca/context/invalid/with-object/binary_op_neq_with_one_class_r.deca
class A{}

{
    A a = new A();
    true != a;
}